--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "watch": "tsc -w",
-    "build": "tsc && copyfiles .env package.json yarn.lock dist"
+    "build": "tsc && copyfiles .env package.json yarn.lock dist",
+    "docker": "rm -rf ./dist/ && tsc && cd ./dist/ && pm2-runtime start index.js"
   },
   "dependencies": {
     "copyfiles": "^2.4.1",
