--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: TeamSafecord
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push SafeBot to GHCR
