--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+	"arrowParens": "always",
+	"bracketSpacing": false,
+	"printWidth": 100,
+	"quoteProps": "consistent",
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 2,
+	"trailingComma": "all",
+	"useTabs": false,
+	"endOfLine": "lf"
 }
