--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
 	"printWidth": 100,
 	"quoteProps": "consistent",
 	"semi": true,
-	"singleQuote": true,
+	"singleQuote": false,
 	"tabWidth": 2,
 	"trailingComma": "all",
 	"useTabs": false,
