--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "copyfiles": "^2.4.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "2.6.6"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
