--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "copyfiles": "^2.4.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "fastify": "^3.23.1",
+    "fastify-autoload": "^3.9.0",
     "node-fetch": "2.6.6"
   },
   "devDependencies": {
