--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/node@16.6
+    - uses: actions/checkout@v2
     - name: Install Eslint
-      run: yarn add eslint
+      run: yarn --ignore-engines add eslint
     - name: Run ESLint
       run: npx eslint . --ext .ts
