feat: launch update webhook message (unsecure)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docker": "rm -rf ./dist/ && tsc && cd ./dist/ && pm2-runtime start index.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "copyfiles": "^2.4.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
