--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "tsc && copyfiles .env package.json yarn.lock dist",
     "tristan": "tsc && cd ./dist/ && node index.js",
     "start": "cd ./dist/ && node .",
-    "docker": "rm -rf ./dist/ && tsc && cd ./dist/ && pm2-runtime start index.js"
+    "docker": "rm -rf ./dist/ && tsc && cd ./dist/ && pm2-runtime start index.js",
+    "makethecodereadableinsteadof100errorlens": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "axios": "^0.24.0",
