--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "scripts": {
     "watch": "tsc -w",
     "build": "tsc && copyfiles .env package.json yarn.lock dist",
-    "tristan": "tsc && cd ./dist/ && node index.js",
-    "start": "cd ./dist/ && node .",
+    "start": "tsc && cd ./dist/ && node .",
     "docker": "rm -rf ./dist/ && tsc && cd ./dist/ && pm2-runtime start index.js",
-    "makethecodereadableinsteadof100errorlens": "eslint . --ext .ts --fix"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "axios": "^0.24.0",
