feat: better linting

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,27 @@
 {
-	"root": true,
-	"env": {
-		"node": true,
-		"es6": true
-	},
-	"plugins": ["@typescript-eslint"],
-	"parser": "@typescript-eslint/parser",
-	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "google"],
-	"rules": {
-		// Fuck Off
-		"require-jsdoc": "off",
-		// Overlapping errors
-		"@typescript-eslint/no-unused-vars": "off",
-		// Qol
-		"max-len": ["error", { "code": 200 }],
-		"quotes": "off",
-		// terrible opinion, google
-		"object-curly-spacing": "off",
-		// just why
-		"@typescript-eslint/no-empty-function": "off"
-	}
+  "extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:@typescript-eslint/recommended"],
+  "plugins": ["prettier", "@typescript-eslint"],
+  "rules": {
+    "eqeqeq": "error",
+    "no-console": "off",
+    "no-undef": "off",
+    "no-unused-vars": "off",
+    "prettier/prettier": "error",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": "warn"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "ignorePatterns": ["node_modules", "build", "dist", "public"]
 }
