--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Eslint
-      run: yarn --ignore-engines add eslint
-    - name: Run ESLint
-      run: npx eslint . --ext .ts
+      - uses: actions/checkout@v2
+      - name: Lint
+        uses: getsentry/action-eslint-fix@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
