--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,17 +8,21 @@ on:
       - main
 
 jobs:
-  eslint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: bradennapier/eslint-plus-action@v3.4.2
-
   Build-and-Push-SafeBot-to-GHCR:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: lint
+        run: |
+          yarn
+          yarn lint:fix
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "automate: lint"
+          git push
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
