--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: lint
         run: |
-          yarn lint:fix
+          npx eslint --cache --fix \"src/**/*.{js,jsx,ts,tsx}\"
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
