--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "safebot",
+  "version": "1.0.0",
+  "main": "dist/index",
+  "repository": "https://github.com/TeamSafecord/safebot.git",
+  "author": "TeamSafecord",
+  "license": "MIT",
+  "private": true,
   "scripts": {
     "watch": "tsc -w",
     "build": "tsc && copyfiles .env package.json yarn.lock dist",
@@ -35,6 +42,6 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   }
 }
