--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,11 @@ on:
       - main
 
 jobs:
-  Run-ESLint:
+  Build-and-Push-SafeBot-to-GHCR:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Run ESLint
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -25,10 +27,6 @@ jobs:
           git commit -m "automate: lint"
           git push
 
-  Build-and-Push-SafeBot-to-GHCR:
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
