--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
       - name: Run ESLint
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+        uses: actions/checkout@v2
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'yarn'
-      - run: |
+        run: |
           yarn install
           yarn lint:fix
           git config --global user.name "github-actions[bot]"
