--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,17 +17,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'yarn'
-        run: |
-          yarn install
-          yarn lint:fix
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A
-          git commit -m "automate: lint"
-          git push
+          cache: yarn
+        uses: bradennapier/eslint-plus-action@v3.4.2
 
-      - name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registrys
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
