--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,18 +8,20 @@ on:
       - main
 
 jobs:
+    Run-ESLint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+      - uses: bradennapier/eslint-plus-action@v3.4.2
+
   Build-and-Push-SafeBot-to-GHCR:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Run ESLint
-        uses: actions/checkout@v2
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: yarn
-        uses: bradennapier/eslint-plus-action@v3.4.2
-
       - name: Login to GitHub Container Registrys
         uses: docker/login-action@v1
         with:
